tests/fixtures/valid/valid-js.use-strict.cjs
"use strict";

console.log("CommonJS needs 'use strict'");
