tests/fixtures/invalid/invalid-js.use-strict.cjs
console.log("CommonJS needs 'use strict'");
